// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobsList should render jobs list with no active active job if it is invalid 1`] = `
<React.Fragment>
  <form
    className="job-filter-controls"
    onSubmit={[Function]}
  >
    <TagsSelect
      label="Filter Jobs"
      onChange={[Function]}
      placeholder="Type tag name..."
    />
  </form>
  <ul
    className="list-group scrollable job-list"
  >
    <JobTile
      isActive={false}
      jobId="12344"
      status="finished"
      tags={Array []}
    />
    <JobTile
      isActive={false}
      jobId="12345"
      status="finished"
      tags={Array []}
    />
    <JobTile
      isActive={false}
      jobId="12346"
      status="finished"
      tags={Array []}
    />
  </ul>
</React.Fragment>
`;

exports[`JobsList should render jobs with active job if valid active job 1`] = `
<React.Fragment>
  <form
    className="job-filter-controls"
    onSubmit={[Function]}
  >
    <TagsSelect
      label="Filter Jobs"
      onChange={[Function]}
      placeholder="Type tag name..."
    />
  </form>
  <ul
    className="list-group scrollable job-list"
  >
    <JobTile
      isActive={false}
      jobId="12344"
      status="finished"
      tags={Array []}
    />
    <JobTile
      isActive={true}
      jobId="12345"
      status="finished"
      tags={Array []}
    />
    <JobTile
      isActive={false}
      jobId="12346"
      status="finished"
      tags={Array []}
    />
  </ul>
</React.Fragment>
`;
